Closed Bug 858533 Opened 11 years ago Closed 11 years ago

IonMonkey: Not using idempotent caches with --no-jm

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: jandem, Assigned: jandem)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
When baseline landed there was an unexpected v8-richards win. The problem is that the old BL+Ion line used --no-jm and this prevented IonBuilder from marking caches as idempotent. The attached patch shouldn't make any difference with the default flags, but avoids perf problems when JM is disabled.
Attachment #733823 - Flags: review?(kvijayan)
Attachment #733823 - Flags: review?(kvijayan) → review+
https://hg.mozilla.org/mozilla-central/rev/6ec116262288
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: