Bug 858533 - Don't stop marking caches as idempotent if JM is disabled. r=djvj